# PlagiarismPrograms

./: ASTDump-C.cpp  ASTDump.cpp  ASTHash.cpp  CMakeLists.txt  LICENSE  README.md  common.py  main.py  matcher.cpp  prepare_hash.py  requirements.txt  writer.py
ASTDump/: ASTDump-C.cpp
ASTHasher/: ASTHash.cpp
BearTrap/: HeightCalc.cpp  matcher.cpp
CommonLib/: CalcHashes.cpp  CalcHashes.h  VisitNodes.inc
Docker/: Dockerfile  cron_file  docker-compose.yml  entry_point.sh  install.sh  run.sh
PythonFrontend/: compare.py  main.py  prepare_hash.py  stats.py  writer.py
PythonFrontend/SqlTemplate/: GetAllMetrics.sql  GetNotMatchedPairSourceTemplate.sql  GetNotMatchedPairSourceTemplateCombinedHashes.sql  GetNotMatchedPairSourceTemplateHashes.sql  GetOnlyRunsWithManual.sql  GetRandomPrograms.sql  UpdateBearTrapSimilarityTempalte.sql  UpdateHasherTemplate.sql  UpdateSimilarityTempalte.sql
Tests/: RealTest1.cpp  RealTest2.cpp  example.cpp  example2.cpp  example_duplicate.cpp  test.cpp
